--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Przypominajka</string>
     <string name="facebook_app_id">679612558870133</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
